--- a/myApp/package.json
+++ b/myApp/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -28,7 +28,6 @@
     "express": "^4.16.3",
     "jquery": "^3.3.1",
     "path": "^0.12.7",
-    "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
